--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: 16.x
         cache: npm
-    - run: npm ci
+    # - run: npm ci
     - run: npm run build
     - run: npm run format-check
     - run: npm test
