--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,24 +12,9 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set Node.js 16
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-dotnet@v1
       with:
-        node-version: 16.x
-        cache: npm
-    # - run: npm ci
-    - run: npm run build
-    - run: npm run format-check
-    - run: npm test
-    - name: Verify no unstaged changes
-      if: runner.os != 'windows'
-      run: __tests__/verify-no-unstaged-changes.sh
-  
+        dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+    - run: dotnet build ./CICD/application/Apps.sln
