--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         dotnet-version: '6.0.x' # SDK Version to use; x will use the latest version of the 3.1 channel
     - run: dotnet build ./CICD/application/Apps.sln
-    - run: dotnet run
+    - run: dotnet run ./CICD/application/BenchRepo/BenchRepo.csproj
+
     # - name: Check installed version
     #   shell: pwsh
     #   run: |
